--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/scroll-lock": "^2.1.0",
     "animejs": "^3.2.1",
     "classnames": "^2.3.2",
     "eslint": "8.35.0",
@@ -22,6 +23,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "scroll-lock": "^2.1.5",
     "typescript": "4.9.5"
   },
   "devDependencies": {
