--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "buildcss": "npx tailwindcss -i ./styles/src.css -o ./styles/globals.css --watch"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.16",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -19,6 +18,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "iconoir-react": "^6.4.0",
     "next": "13.2.3",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
