--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/scroll-lock": "^2.1.0",
+    "@vercel/analytics": "^0.1.11",
     "animejs": "^3.2.1",
     "classnames": "^2.3.2",
     "eslint": "8.35.0",
