--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "buildcss": "npx tailwindcss -i ./styles/src.css -o ./styles/globals.css --watch"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.16.3",
+    "@contentful/rich-text-types": "^16.0.3",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -17,6 +19,8 @@
     "@vercel/analytics": "^0.1.11",
     "animejs": "^3.2.1",
     "classnames": "^2.3.2",
+    "contentful": "^9.3.5",
+    "date-fns": "^2.29.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "iconoir-react": "^6.4.0",
