--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "13.2.3",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "18.2.0",
     "scroll-lock": "^2.1.5",
     "typescript": "4.9.5"
